# opengl-tutorial

opengl1_triangle/: .gitignore  CMakeLists.txt
opengl1_triangle/data/shaders/: main.frag  main.vert
opengl1_triangle/src/: ShaderProgram.cpp  ShaderProgram.h  main.cpp
opengl2_objects/: .gitignore  CMakeLists.txt  main.cpp
